@@ -447,6 +447,10 @@ Release 0.20.0 - Unreleased
 
     HADOOP-4791. Fix rpm build process for Chukwa. (Eric Yang via cdouglas)
 
+    HADOOP-4878. Fix eclipse plugin classpath file to point to ivy's resolved
+    lib directory and added the same to test-patch.sh. (Giridharan Kesavan via
+    acmurthy)
+
 Release 0.19.1 - Unreleased
 
   IMPROVEMENTS
